# Planetary-Eclipse-Simulation

./: .gitignore  CMakeLists.txt  CMakeListsOLD.txt  LICENSE  README.md
include/: Game.h  GameObject.h  Initializer.h  Logger.h  Misc.h  OpenGLDraw.h  OpenGLLoader.h  QueryAttributes.h  VECTOR3D.h  Vertex.h  Window.h  _Window.h  callbackFunctions.h
include/glad/: glad.h
shaders/: fragment.frag  vertex.vert
src/: Game.cpp  Initializer.cpp  Logger.cpp  Source.cpp  Window.cpp  _Window.cpp  callbackFunctions.cpp  glad.c
